@@ -139,6 +139,8 @@ namespace Orthanc
 
     void CallHttpClient(const void* parameters);
 
+    void CallHttpClient2(const void* parameters);
+
     void GetFontInfo(const void* parameters);
 
     void DrawText(const void* parameters);
